[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/kenney_top-down-shooter/PNG/Robot 1/robot1_gun.png" type="Texture" id=1]
[ext_resource path="res://sound_effects/gun_fire.wav" type="AudioStream" id=3]
[ext_resource path="res://blue_man.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.2971

[sub_resource type="CircleShape2D" id=2]
radius = 17.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "aggro",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 375.5, 10 )

[node name="MrC_Robot" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="shoot_timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 3 )
animation = "aggro"

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -21.0

[node name="Label" type="Label" parent="."]
margin_left = -33.0
margin_top = -40.0
margin_right = 33.0
margin_bottom = -26.0
text = "MrC Robot"

[node name="player_detector" type="CollisionShape2D" parent="."]
position = Vector2( 373.5, -1 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 24, 7 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
